k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ao1-scanner
  labels:
    name: ao1-scanner
